error.log
   Compiling gcontacts v0.1.0 (/home/takahiro/work/gcontacts/gcontacts)
error[E0277]: `(Response<Body>, ListConnectionsResponse)` is not an iterator
  --> src/main.rs:85:19
   |
85 |     for person in connections {
   |                   ^^^^^^^^^^^ `(Response<Body>, ListConnectionsResponse)` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `(Response<Body>, ListConnectionsResponse)`
   = note: required for `(Response<Body>, ListConnectionsResponse)` to implement `IntoIterator`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `gcontacts` (bin "gcontacts") due to previous error
